Ensure proper contrast-ratio for time

--- a/app/assets/stylesheets/hera/modules/_notifications.scss
+++ b/app/assets/stylesheets/hera/modules/_notifications.scss
@@ -11,7 +11,7 @@
     z-index: 2;
 
     .time {
-      color: $text-muted;
+      color: $grey-800;
     }
   }
 
